# SpaceJaguarActionRPG

./: .gitignore  .gitmodules  CREDITS.txt  README.md
buildScripts/native/: clean.sh  run.sh  staticBuild.sh
docs/gameDesign/: ideas.txt
docs/scripting/: scripting.txt
project/cmake/: linuxStatic-CMakeLists.txt
project/resources/: chibihero.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.blend  com.demensdeum.deathmaskgame.combatdrone.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.runAnimationFrame1.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.runAnimationFrame2.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.runAnimationFrame3.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.runAnimationFrame4.fsglmodel  com.demensdeum.deathmaskgame.combatdrone.runAnimationFrame5.fsglmodel  com.demensdeum.flamesteelengine.application.main.js  com.demensdeum.flamesteelengine.utils.js  com.demensdeum.flamesteelenginegametoolkit.bindings.js  com.demensdeum.spacejaguar.grass.texture  com.demensdeum.spacejaguaractionrpg.companylogocontroller.js  com.demensdeum.spacejaguaractionrpg.enemiesgenerator.js  com.demensdeum.spacejaguaractionrpg.enginelogocontroller.js  com.demensdeum.spacejaguaractionrpg.floor.fsglmodel  com.demensdeum.spacejaguaractionrpg.gameplaycontroller.js  com.demensdeum.spacejaguaractionrpg.gameplayuicontroller.js  com.demensdeum.spacejaguaractionrpg.logo.fsglmodel  com.demensdeum.spacejaguaractionrpg.mazegenerator.js  com.demensdeum.spacejaguaractionrpg.menucontroller.js  com.demensdeum.spacejaguaractionrpg.planet.texture  com.demensdeum.spacejaguaractionrpg.scripts.sceneController.constants.js  com.demensdeum.spacejaguaractionrpg.scripts.sceneController.js  com.demensdeum.spacejaguaractionrpg.scripts.scenecontroller.enemies.js  com.demensdeum.spacejaguaractionrpg.scripts.scenecontroller.jaguar.js  com.demensdeum.spacejaguaractionrpg.scripts.towns.js  com.demensdeum.spacejaguaractionrpg.scripts.wallsgenerator.js  com.demensdeum.spacejaguaractionrpg.space.fsglmodel  com.demensdeum.spacejaguaractionrpg.space.texture  com.demensdeum.spacejaguaractionrpg.tests.skeletalanimation.js  com.demensdeum.spacejaguaractionrpg.town.blend  com.demensdeum.spacejaguaractionrpg.town.fsglmodel  com.demensdeum.spacejaguaractionrpg.wall.fsglmodel  com.demensdeumflamesteelenginegametoolkit.private.js  com.demensdeum⁄spacejaguaractionrpg.logo.texture  com.flamesteelengine.cube.fsglmodel  com.flamesteelengine.sphere.fsglmodel  com.spacejaguaractionrpg.town.blend  com.spacejaguaractionrpg.town.mtl
project/resources/models/: chibihero.fsglmodel  com.demensdeum.companylogo.plane.fsglmodel  com.demensdeum.flamesteelengine.cube.fsglmodel  com.demensdeum.flamesteelengine.plane.fsglmodel  com.demensdeum.flamesteelengine.smallCenteredCubeTest.fsglmodel  com.demensdeum.spacejaguaractionrpg.chest.fsglmodel  com.demensdeum.spacejaguaractionrpg.enemy.fsglmodel  com.demensdeum.spacejaguaractionrpg.exitPoint.fsglmodel  com.demensdeum.spacejaguaractionrpg.health.plane.fsglmodel  com.demensdeum.spacejaguaractionrpg.jag.fsglmodel  com.demensdeum.spacejaguaractionrpg.maze.fsglmodel  com.demensdeum.spacejaguaractionrpg.mountain.fsglmodel  com.demensdeum.spacejaguaractionrpg.stars.fsglmodel
project/resources/scripts/: com.demensdeum.flamesteelengine.application.includes.js  com.demensdeum.flamesteelengine.application.main.js  com.demensdeum.flamesteelengine.list.js  com.demensdeum.flamesteelengine.utils.js  com.demensdeum.flamesteelenginegametoolkit.bindings.js  com.demensdeum.locationGeneratorController.js  com.demensdeum.shipTravelController.js  com.demensdeum.spacejaguaractionrpg.cameraControls.js  com.demensdeum.spacejaguaractionrpg.companyLogoController.js  com.demensdeum.spacejaguaractionrpg.context.js  com.demensdeum.spacejaguaractionrpg.engineLogoController.js  com.demensdeum.spacejaguaractionrpg.gameplayData.js  com.demensdeum.spacejaguaractionrpg.gameplaycontroller.js  com.demensdeum.spacejaguaractionrpg.includes.js  com.demensdeum.spacejaguaractionrpg.interactionController.js  com.demensdeum.spacejaguaractionrpg.intergalacticNavigatorController.js  com.demensdeum.spacejaguaractionrpg.itemType.js  com.demensdeum.spacejaguaractionrpg.jag.js  com.demensdeum.spacejaguaractionrpg.location.js  com.demensdeum.spacejaguaractionrpg.locationGeneratorController.js  com.demensdeum.spacejaguaractionrpg.mapSceneController.js  com.demensdeum.spacejaguaractionrpg.mapsFactory.js  com.demensdeum.spacejaguaractionrpg.ship.js  (+19 more)
project/src/: main.cpp
project/staticBuild/native/: CMakeLists.txt
sabeplus-projects/: staticNative.spproject
sabeplus-projects/linux/: Project.spproject
sabeplus-projects/linux-tests-skeletal-animation/: Project.spproject  build.sh  run.sh
sabeplus-projects/linuxStatic/: Project.spproject  clean.sh  run.sh
sabeplus-projects/webassembly/: Project.spproject
sabeplus-projects/windows/: Project.spproject
scripts/: commitByTayTay.sh  scriptsEditing.sh  switchBuildsToDebug.sh  switchBuildsToRelease.sh
scripts/buildScripts/: buildAll.sh
scripts/buildScripts/ios/resources/: CMakeLists.txt
scripts/buildScripts/ios/resources/pack/: README  build.sh
scripts/buildScripts/ios/resources/pack/provision/: .none
scripts/buildScripts/ios/resources/pack/resources/: Info.plist
scripts/buildScripts/webassembly/resources/: CMakeLists.txt  index.html
scripts/buildScripts/windows/resources/: CMakeLists.txt
scripts/buildScripts/windows/resources/include/GL/: eglew.h  glxew.h  wglew.h
scripts/buildScripts/windows/resources/include/SDL2/: SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_endian.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_loadso.h  SDL_log.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_pixels.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_syswm.h  SDL_test_crc32.h  SDL_test_images.h  SDL_test_md5.h  SDL_test_random.h  SDL_thread.h  SDL_timer.h  SDL_video.h  SDL_vulkan.h
scripts/utils/: texturesScaler.py
utils/: astyleFormat.sh  commitByTayTay.sh
(+99 files in other folders)
