cmake_minimum_required(VERSION 3.5)

set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)

project(FlameSteelEngineProject)

set(FSEGT_PROJECT_NAME FlameSteelEngineProject)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CXX_FLAGS "-Werror -Wall -Wextra -Werror=return-type")

set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${FSEGT_PROJECT_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${FSEGT_PROJECT_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${FSEGT_PROJECT_NAME})
set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${FSEGT_PROJECT_NAME})

if (NOT FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY)
    message(FATAL_ERROR "No FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY variable provided")
endif()

include_directories(
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/include/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelCore/src/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelEngineGameToolkit/src/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FSGL/src/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelEngineGameToolkitFSGL/src/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelBattleHorn/src/
    ${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelCommonTraits/src/
)

file(GLOB_RECURSE SOURCE_FILES
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/project/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelCore/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelEngineGameToolkit/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FSGL/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelEngineGameToolkitFSGL/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelBattleHorn/src/*.cpp"
    "${FLAME_STEEL_PROJECT_TEMPLATE_ROOT_DIRECTORY}/FlameSteelFramework/FlameSteelCommonTraits/src/*.cpp"
)

add_executable(${FSEGT_PROJECT_NAME} ${SOURCE_FILES})

target_link_libraries(${FSEGT_PROJECT_NAME} SDL2 GL GLEW SDL2_ttf SDL2_mixer SDL2_image)
